Upped to Java 15, fixed slf4j version conflict and added more tooling to docker image. (#13)
* Upped to Java 15, fixed slf4j version conflict and added more tooling to docker image.
* Upped build container
* Upped pmd version