@@ -17,9 +17,9 @@
     <properties>
         <mainClass>no.ssb.dapla.dataset.doc.service.DatasetDocApplication</mainClass>
         <slf4j.version>1.7.30</slf4j.version>
-        <maven.compiler.release>14</maven.compiler.release>
-        <maven.compiler.source>14</maven.compiler.source>
-        <pmdVersion>6.22.0</pmdVersion>
+        <maven.compiler.release>15</maven.compiler.release>
+        <maven.compiler.source>15</maven.compiler.source>
+        <pmdVersion>6.28.0</pmdVersion>
     </properties>
 
     <dependencies>
@@ -151,6 +151,10 @@
                     <artifactId>slf4j-api</artifactId>
                 </exclusion>
                 <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>com.google.guava</groupId>
                     <artifactId>guava</artifactId>
                 </exclusion>
@@ -230,10 +234,9 @@
                     </annotationProcessorPaths>
                     <compilerArgs>
                         <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
-                        <arg>--enable-preview</arg>
                     </compilerArgs>
-                    <source>14</source>
-                    <target>14</target>
+                    <source>15</source>
+                    <target>15</target>
                 </configuration>
             </plugin>
             <plugin>
